--- a/style.css
+++ b/style.css
@@ -3,11 +3,22 @@
     padding: 0;
     font-family: Arial, Helvetica, sans-serif;
 }
-
+button{
+    background: none;
+	color: inherit;
+	border: none;
+	padding: 0;
+	font: inherit;
+	cursor: pointer;
+	outline: inherit;   
+}
 ul{
     list-style-type: none;
     display: flex;
     gap: 24px;
+}
+img{
+    max-width: 100%;
 }
 .header-wrapper{
     background-color: #1F2937;
@@ -19,7 +30,7 @@ ul{
     display: flex;
     justify-content: space-between;
     align-items: center;
-    padding:24px;
+    padding:24px 0px 0px 0px;
 }
 .header-logo{
  font-size: 24px;
@@ -27,4 +38,25 @@ ul{
 }
 .white{
     color: #F9FAF8;
+}
+.header-content{
+    display: flex;
+    padding: 100px 0 100px 0;
+    gap: 68px;
+}
+.header-content-image{
+    flex: 1;
+}
+.header-content-text{
+    flex: 1;
+    display: flex;
+    flex-direction: column;
+    justify-content: space-around;
+    align-items: flex-start;
+}
+.header-text-button{
+    background-color: #3882F6;
+    padding: 8px 24px 8px 24px;
+    font-weight: bold;
+    border-radius: 10px;
 }
