--- a/style.css
+++ b/style.css
@@ -51,12 +51,19 @@ img{
     flex: 1;
     display: flex;
     flex-direction: column;
-    justify-content: space-around;
     align-items: flex-start;
+    gap: 24px;
 }
 .header-text-button{
     background-color: #3882F6;
     padding: 8px 24px 8px 24px;
     font-weight: bold;
     border-radius: 10px;
+}
+.header-content-title{
+    font-size: 48px;
+}
+.header-content-para{
+    font-size: 18px;
+    color: #E5E7EB;
 }
