--- a/style.css
+++ b/style.css
@@ -67,3 +67,78 @@ img{
     font-size: 18px;
     color: #E5E7EB;
 }
+.coach-img{
+    width: 120px;
+    height: 120px;
+    object-fit: cover;
+    border: 3px solid #3882F6;
+    border-radius: 10px;
+}
+.body-1{
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    gap: 36px;
+    margin-top: 64px;
+    padding-bottom: 100px;
+}
+.coaches-wrapper{
+    display: flex;
+    text-align: center;
+    gap: 60px;
+}
+.coach-1-wrapper, .coach-2-wrapper, .coach-3-wrapper, .coach-4-wrapper{
+    display: flex;
+    flex-direction: column;
+    gap: 16px;
+    align-items: center;
+    width: 160px;
+}
+.coach-header{
+    font-weight: bold;
+    font-size: 36px;
+}
+.body-2{
+    background-color: #E5E7EB;
+    display: flex;
+    flex-direction: column;
+    padding-top: 140px;
+    padding-bottom: 140px;
+    gap: 20px;
+}
+.quote{
+    font-style: italic;
+    font-size: 24px;
+}
+.quote-sayer{
+    font-weight: bold;
+    font-size: 24px;
+    align-self: flex-end;
+}
+.call-box{
+    background-color:#3882F6;
+    margin-top: 90px;
+    margin-bottom: 90px;
+    padding: 40px 80px 40px 80px;
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    border-radius: 10px;
+}
+.call-button{
+    border: 2px solid white;
+    padding: 8px 24px 8px 24px;
+    font-weight: bold;
+    border-radius: 10px;
+}
+.call-title{
+    font-size: 24px;
+    font-weight: bold;
+    margin-bottom: 8px;
+}
+.footer-wrapper{
+    background-color: #1F2937;
+   display: flex;
+   justify-content: center;
+   padding: 40px; 
+}
